Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/UGameUserSettings.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetDynamicResolutionEnabled(IntPtr self, bool bEnable);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetFoliageQuality(IntPtr self, int value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetFrameRateLimit(IntPtr self, float newLimit);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetFrameRateLimitCVar(IntPtr self, float inLimit);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetOverallScalabilityLevel(IntPtr self, int value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetPostProcessingQuality(IntPtr self, int value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetResolutionScaleNormalized(IntPtr self, float newScaleNormalized);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetResolutionScaleValue(IntPtr self, int newScaleValue);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetResolutionScaleValueEx(IntPtr self, float newScaleValue);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetScreenResolution(IntPtr self, IntPtr resolution);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetShadowQuality(IntPtr self, int value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetSyncIntervalCVar(IntPtr self, int inInterval);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetSyncTypeCVar(IntPtr self, int inInterval);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetTextureQuality(IntPtr self, int value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetToDefaults(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetViewDistanceQuality(IntPtr self, int value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetVisualEffectQuality(IntPtr self, int value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetVSyncEnabled(IntPtr self, bool bEnable);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_SetWindowPosition(IntPtr self, int windowPosX, int windowPosY);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameUserSettings_SupportsHDRDisplayOutput(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_UpdateResolutionQuality(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_UpdateVersion(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameUserSettings_ValidateSettings(IntPtr self);
		
		#endregion
		
		#region Property
		public bool bUseDynamicResolution
		{
			get => E_PROP_UGameUserSettings_bUseDynamicResolution_GET(NativePointer);
			set => E_PROP_UGameUserSettings_bUseDynamicResolution_SET(NativePointer, value);
		}

		public bool bUseVSync
		{
			get => E_PROP_UGameUserSettings_bUseVSync_GET(NativePointer);
			set => E_PROP_UGameUserSettings_bUseVSync_SET(NativePointer, value);
		}

		#endregion
		
		#region ExternMethods
		
		/// <summary>
		/// <para>Applies the settings stored in ScalabilityQuality and saves settings </para>
		/// </summary>
		public virtual void ApplyHardwareBenchmarkResults()
			=> E_UGameUserSettings_ApplyHardwareBenchmarkResults(this);
		
		public virtual void ApplyNonResolutionSettings()
			=> E_UGameUserSettings_ApplyNonResolutionSettings(this);
		
		public void ApplyResolutionSettings(bool bCheckForCommandLineOverrides)
			=> E_UGameUserSettings_ApplyResolutionSettings(this, bCheckForCommandLineOverrides);
		
		
		/// <summary>
		/// <para>Applies all current user settings to the game and saves to permanent storage (e.g. file), optionally checking for command line overrides. </para>
		/// </summary>
		public virtual void ApplySettings(bool bCheckForCommandLineOverrides)
			=> E_UGameUserSettings_ApplySettings(this, bCheckForCommandLineOverrides);
		
		
		/// <summary>
		/// <para>Mark current video mode settings (fullscreenmode/resolution) as being confirmed by the user </para>
		/// </summary>
		public virtual void ConfirmVideoMode()
			=> E_UGameUserSettings_ConfirmVideoMode(this);
		
		
		/// <summary>
		/// <para>Enables or disables HDR display output. Can be called again to change the desired nit level </para>
		/// </summary>
		public void EnableHDRDisplayOutput(bool bEnable, int displayNits = 1000)
			=> E_UGameUserSettings_EnableHDRDisplayOutput(this, bEnable, displayNits);
		
		
		/// <summary>
		/// <para>Picks the best resolution quality for a given screen size </para>
		/// </summary>
		protected float FindResolutionQualityForScreenSize(float width, float height)
			=> E_UGameUserSettings_FindResolutionQualityForScreenSize(this, width, height);
		
		public int GetAntiAliasingQuality()
			=> E_UGameUserSettings_GetAntiAliasingQuality(this);
		
		
		/// <summary>
		/// <para>Returns the user's audio quality level setting </para>
		/// </summary>
		public int GetAudioQualityLevel()
			=> E_UGameUserSettings_GetAudioQualityLevel(this);
		
		
		/// <summary>
		/// <para>Returns 0 if HDR isn't supported or is turned off </para>
		/// </summary>
		public int GetCurrentHDRDisplayNits()
			=> E_UGameUserSettings_GetCurrentHDRDisplayNits(this);
		
		
		/// <summary>
		/// <para>Returns the default resolution when no resolution is set </para>
		/// </summary>
		public FIntPoint GetDefaultResolution()
			=> E_UGameUserSettings_GetDefaultResolution(this);
		
		
		/// <summary>
		/// <para>Gets the desired resolution quality based on DesiredScreenWidth/Height and the current screen resolution </para>
		/// </summary>
		public virtual float GetDefaultResolutionScale()
			=> E_UGameUserSettings_GetDefaultResolutionScale(this);
		
		
		/// <summary>
		/// <para>Returns the default window position when no position is set </para>
		/// </summary>
		public FIntPoint GetDefaultWindowPosition()
			=> E_UGameUserSettings_GetDefaultWindowPosition(this);
		
		
		/// <summary>
		/// <para>Returns user's desktop resolution, in pixels. </para>
		/// </summary>
		public FIntPoint GetDesktopResolution()
			=> E_UGameUserSettings_GetDesktopResolution(this);
		
		
		/// <summary>
		/// <para>Returns the effective frame rate limit (by default it returns the FrameRateLimit member) </para>
		/// </summary>
		protected virtual float GetEffectiveFrameRateLimit()
			=> E_UGameUserSettings_GetEffectiveFrameRateLimit(this);
		
		public int GetFoliageQuality()
			=> E_UGameUserSettings_GetFoliageQuality(this);
		
		
		/// <summary>
		/// <para>Gets the user's frame rate limit (0 indiciates the frame rate limit is disabled) </para>
		/// </summary>
		public float GetFrameRateLimit()
			=> E_UGameUserSettings_GetFrameRateLimit(this);
		
		
		/// <summary>
		/// <para>Returns the game local machine settings (resolution, windowing mode, scalability settings, etc...) </para>
		/// </summary>
		public UGameUserSettings GetGameUserSettings()
			=> E_UGameUserSettings_GetGameUserSettings(this);
		
		
		/// <summary>
		/// <para>Returns the last confirmed user setting for game screen resolution, in pixels. </para>
		/// </summary>
		public FIntPoint GetLastConfirmedScreenResolution()
			=> E_UGameUserSettings_GetLastConfirmedScreenResolution(this);
		
		
		/// <summary>
		/// <para>Returns the last CPU benchmark result (set by RunHardwareBenchmark) </para>
		/// </summary>
		public float GetLastCPUBenchmarkResult()
			=> E_UGameUserSettings_GetLastCPUBenchmarkResult(this);
		
		
		/// <summary>
		/// <para>Returns the last GPU benchmark result (set by RunHardwareBenchmark) </para>
		/// </summary>
		public float GetLastGPUBenchmarkResult()
			=> E_UGameUserSettings_GetLastGPUBenchmarkResult(this);
		
		public virtual int GetOverallScalabilityLevel()
			=> E_UGameUserSettings_GetOverallScalabilityLevel(this);
		
		public int GetPostProcessingQuality()
			=> E_UGameUserSettings_GetPostProcessingQuality(this);
		
		
		/// <summary>
		/// <para>Gets the recommended resolution quality based on LastRecommendedScreenWidth/Height and the current screen resolution </para>
		/// </summary>
		public virtual float GetRecommendedResolutionScale()
			=> E_UGameUserSettings_GetRecommendedResolutionScale(this);
		
		public void GetResolutionScaleInformation_Deprecated(float currentScaleNormalized, int currentScaleValue, int minScaleValue, int maxScaleValue)
			=> E_UGameUserSettings_GetResolutionScaleInformation(this, currentScaleNormalized, currentScaleValue, minScaleValue, maxScaleValue);
		
		public void GetResolutionScaleInformation(float currentScaleNormalized, float currentScaleValue, float minScaleValue, float maxScaleValue)
			=> E_UGameUserSettings_GetResolutionScaleInformationEx(this, currentScaleNormalized, currentScaleValue, minScaleValue, maxScaleValue);
		
		
		/// <summary>
		/// <para>Returns the user setting for game screen resolution, in pixels. </para>
		/// </summary>
		public FIntPoint GetScreenResolution()
			=> E_UGameUserSettings_GetScreenResolution(this);
		
		public int GetShadowQuality()
			=> E_UGameUserSettings_GetShadowQuality(this);
		
		
		/// <summary>
		/// <para>Gets the current vsync interval setting </para>
		/// </summary>
		public int GetSyncInterval()
			=> E_UGameUserSettings_GetSyncInterval(this);
		
		public int GetTextureQuality()
			=> E_UGameUserSettings_GetTextureQuality(this);
		
		public int GetViewDistanceQuality()
			=> E_UGameUserSettings_GetViewDistanceQuality(this);
		
		public int GetVisualEffectQuality()
			=> E_UGameUserSettings_GetVisualEffectQuality(this);
		
		public virtual FIntPoint GetWindowPosition()
			=> E_UGameUserSettings_GetWindowPosition(this);
		
		
		/// <summary>
		/// <para>Checks if any user settings is different from current </para>
		/// </summary>
		public virtual bool IsDirty()
			=> E_UGameUserSettings_IsDirty(this);
		
